--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "vitest"
+    "test": "vitest",
+        "dev:server": "tsx watch src/server.ts --clear-screen=false"
   },
   "dependencies": {
+    "@fastify/formbody": "^8.0.2",
     "fastify": "^5.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
