--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
-  "name": "biff-ts",
-  "private": true,
-  "version": "0.0.0",
+  "name": "bevel",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "test": "vitest",
-        "dev:server": "tsx watch src/server.ts --clear-screen=false"
+    "dev": "tsx src/server/router.ts"
   },
   "dependencies": {
-    "@fastify/formbody": "^8.0.2",
-    "fastify": "^5.3.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "zod": "^3.25.23"
+    "@hono/node-server": "^1.14.2",
+    "@libsql/client": "^0.15.7",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
+    "hono": "^4.7.10",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.21",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.5.0",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.4"
+    "tsx": "^3.12.7",
+    "typescript": "^5.3.3"
   }
 }
