feat(cli): add bevel dev command using Bun hot-reload
- Implemented src/cli/dev.ts using Bun.serve()
- Removed package.json in favor of bunfig.toml
- Enabled Bun native hot reload via [0m[1m[35mBun[0m is a fast JavaScript runtime, package manager, bundler, and test runner. [2m(1.2.9+9a329c04c)[0m

[1mUsage:[0m [1mbun <command> [36m[...flags][0m [1m[...args][0m

[1mCommands:[0m
  [1m[35mrun[0m       [2m./my-script.ts[0m       Execute a file with Bun
            [2mlint[0m                 Run a package.json script
  [1m[35mtest[0m                           Run unit tests with Bun
  [1m[35mx[0m         [2mnuxi            [0m     Execute a package binary (CLI), installing if needed [2m(bunx)[0m
  [1m[35mrepl[0m                           Start a REPL session with Bun
  [1m[35mexec[0m                           Run a shell script directly with Bun

  [1m[34minstall[0m                        Install dependencies for a package.json [2m(bun i)[0m
  [1m[34madd[0m       [2mlyra            [0m     Add a dependency to package.json [2m(bun a)[0m
  [1m[34mremove[0m    [2mis-array        [0m     Remove a dependency from package.json [2m(bun rm)[0m
  [1m[34mupdate[0m    [2m@remix-run/dev  [0m     Update outdated dependencies
  [1m[34moutdated[0m                       Display latest versions of outdated dependencies
  [1m[34mlink[0m      [2m[<package>][0m          Register or link a local npm package
  [1m[34munlink[0m                         Unregister a local npm package
  [1m[34mpublish[0m                        Publish a package to the npm registry
  [1m[34mpatch [2m<pkg>[0m                    Prepare a package for patching
  [1m[34mpm [2m<subcommand>[0m                Additional package management utilities

  [1m[33mbuild[0m     [2m./a.ts ./b.jsx[0m       Bundle TypeScript & JavaScript into a single file

  [1m[36minit[0m                           Start an empty Bun project from a built-i

--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "bevel",
-  "version": "0.1.0",
+  "name": "#",
+  "module": "index.ts",
   "type": "module",
-  "scripts": {
-    
-    "start": "tsx src/server/router.ts",
-    "dev": "tsx scripts/dev.ts"
+  "private": true,
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.2",
     "@libsql/client": "^0.15.7",
-    "chokidar": "^4.0.3",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.10",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "tsx": "^3.12.7",
-    "typescript": "^5.3.3"
+    "zod": "^3.25.30"
   }
 }
