--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun --watch --hot src/cli/dev.ts",
+    "ui": "bunx vite dev"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "@libsql/client": "^0.15.7",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@rjsf/core": "^6.0.0-beta.10",
+    "@rjsf/validator-ajv8": "^6.0.0-beta.10",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "framer-motion": "^12.15.0",
     "hono": "^4.7.10",
-    "zod": "^3.25.30"
+    "prism-react-renderer": "^2.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.30",
+    "zod-to-json-schema": "^3.24.5"
   }
 }
