--- a/Boff/package.json
+++ b/Boff/package.json
@@ -11,11 +11,16 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
+		"@hono/node-server": "^1.14.3",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.19.1"
 	},
 	"dependencies": {
-		"hono": "^4.7.11"
+		"@hono/trpc-server": "^0.3.4",
+		"@trpc/client": "^11.3.1",
+		"@trpc/server": "^11.3.1",
+		"hono": "^4.7.11",
+		"zod": "^3.25.56"
 	}
 }
