--- a/Boff/tsconfig.json
+++ b/Boff/tsconfig.json
@@ -1,19 +1,21 @@
 {
 	"compilerOptions": {
+		 "types": ["node"],               // ✅ これを入れる
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "ESNext",
+    "strict": true,
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
-		/* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-		"target": "es2021",
+
 		/* Specify a set of bundled library declaration files that describe the target runtime environment. */
 		"lib": ["es2021"],
 		/* Specify what JSX code is generated. */
 		"jsx": "react-jsx",
 
 		/* Specify what module code is generated. */
-		"module": "es2022",
-		/* Specify how TypeScript looks up a file from a given module specifier. */
-		"moduleResolution": "Bundler",
-		/* Enable importing .json files */
+
 		"resolveJsonModule": true,
 
 		/* Allow JavaScript files to be a part of your program. Use the `checkJS` option to get errors from these files. */
@@ -31,15 +33,12 @@
 		/* Ensure that casing is correct in imports. */
 		"forceConsistentCasingInFileNames": true,
 
-		/* Enable all strict type-checking options. */
-		"strict": true,
+
 
 		/* Skip type checking all .d.ts files. */
 		"skipLibCheck": true,
-		"types": [
-			"./worker-configuration.d.ts"
-		]
+
 	},
 	"exclude": ["test"],
-	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
+	"include": ["worker-configuration.d.ts", "src/**/*.ts", "drizzle.config.ts"]
 }
