Licence change commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,11 @@
 {
   "compilerOptions": {
-        "types": ["bun-types", "node"],
-
-    // Environment setup & latest features
-    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-    "declaration": true,
-        "outDir": "dist",
-  
-        
-
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    // Best practices
+    "moduleResolution": "Node",
+    "lib": ["DOM", "ESNext"],
     "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  },
-  "include": ["src"]
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
 }
-
