--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dist"
   ],
   "author": "Yuki Nishikawa",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^22.15.30",
     "bun-types": "^1.2.15"
